# frost-uniffi-sdk

./: .gitignore  .swiftlint.yml  Cargo.toml  LICENSE  Package.resolved  Package.swift  README.md  RELEASE.md  go.mod
.github/workflows/: build_and_test_go.yml  build_and_test_go_randomized.yml  ci.yml  clippy.yml  release.yml  swift-app.yml  swift.yml
Examples/FrostCompanion/FrostCompanion/: AppFeature.swift  AppView.swift  ContentView.swift  FrostCompanionApp.swift  MainScreenReducer.swift  MainScreenView.swift
Examples/FrostCompanion/FrostCompanion.xcodeproj/: project.pbxproj
Examples/FrostCompanion/FrostCompanion/Coordinator/: NewTrustedDealerSchemeFeature.swift  NewTrustedDealerSchemeView.swift  NewTrustedScheme.swift  TrustedDealerFeature.swift
Examples/FrostCompanion/FrostCompanion/Model/: Errors.swift  Model.swift
Examples/FrostCompanion/FrostCompanion/Participant/: ParticipantDetailFeature.swift  ParticipantDetailView.swift  ParticipantImportFeature.swift  ParticipantImportView.swift  ParticipantReducer.swift
Examples/FrostCompanion/FrostCompanion/Public/: PublicKeyPackageDetail.swift  PublicKeyPackageFeature.swift
Examples/FrostCompanion/FrostCompanionTests/: FrostCompanionTests.swift  ParticipanFeatureTests.swift
Examples/FrostCompanion/FrostCompanionUITests/: FrostCompanionUITests.swift  FrostCompanionUITestsLaunchTests.swift
FrostSwift/: README.md
FrostSwift/Sources/FrostSwift/: Coordinator.swift  Error.swift  FFIConversion.swift  FROST.swift  Serialization.swift  SigningParticipant.swift  TrustedDealer.swift
FrostSwift/Sources/FrostSwift/Extensions/: FrostSwift+Orchard.swift
FrostSwift/Sources/FrostSwiftFFI/: frost_uniffi_sdk.swift
FrostSwift/Tests/FrostSwift/: FrostSwiftTests.swift  ModelTests.swift  SerializationTests.swift  TrustedDealerSignatureIntegrationTest.swift  TrustedDealerTests.swift
FrostSwift/Tests/FrostSwift/FrostTests/: FrostSwiftTests.swift
FrostSwift/Tests/FrostSwiftFFI/NotRedPallasTests/: NotRedPallasTests.swift  RedPallasTests.swift
FrostSwift/Tests/OrchardSwiftFFI/OrchardSwiftFFITests/: OrchardSwiftTests.swift
FrostSwiftFFI/: README.md
Scripts/: build_go.sh  build_go_bindings.sh  build_randomized_go.sh  build_swift.sh  replace_remote_binary_with_local.sh  test_bindings.sh  test_randomized_bindings.sh  test_swift.sh
frost-mobile-sdk/: Cargo.toml
frost-mobile-sdk/frost-swift-sdk/: Package.swift
frost-mobile-sdk/frost-swift-sdk/RustFramework.xcframework/: Info.plist
frost-mobile-sdk/frost-swift-sdk/RustFramework.xcframework/ios-arm64/: libfrost_mobile_sdk.dylib
frost-mobile-sdk/src/: coordinator.rs  helpers.rs  lib.rs  participant.rs  randomizer.rs  trusted_dealer.rs  utils.rs
frost-mobile-sdk/src/randomized/: coordinator.rs  mod.rs
frost-mobile-sdk/tests/: helpers.rs  integration_tests.rs
frost-uniffi-sdk/: Cargo.toml  uniffi.toml
frost-uniffi-sdk/FrostSwift/Tests/NotRedPallasTests/: NotRedPallasTests.swift
frost-uniffi-sdk/src/: coordinator.rs  error.rs  lib.rs  participant.rs  serialization.rs  trusted_dealer.rs
frost-uniffi-sdk/src/dkg/: lib.rs
frost-uniffi-sdk/src/orchard/: keys.rs  lib.rs  mod.rs
frost-uniffi-sdk/src/randomized/: coordinator.rs  mod.rs  participant.rs  randomizer.rs
frost-uniffi-sdk/src/randomized/tests/: helpers.rs
frost-uniffi-sdk/tests/: dkg_integration_tests.rs  helpers.rs  integration_tests.rs  randomized_integration_tests.rs
frost_go_ffi/: frost_go_ffi.c  frost_go_ffi.h  frost_go_ffi_orchard_keys_test.go  frost_go_ffi_randomized_test.go  frost_go_ffi_test.go  frost_uniffi_sdk.go
lib/frost-mobile-sdk/: Cargo.toml
lib/frost-mobile-sdk/src/: lib.rs  trusted_dealer.rs  utils.rs
lib/uniffi-bindgen/: Cargo.toml
uniffi-bindgen/src/: uniffi_bindgen.rs
(+7 files in other folders)
