[workspace]
members = ["uniffi-bindgen", "frost-uniffi-sdk"]
resolver = "2"

[workspace.dependencies]
uniffi = "0.27.0"
async-trait = "0.1.77"
eyre = "0.6.12"
frost-ed25519 = { version = "1.0.0", features = ["serde"] }
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "81c649c412e5b6ba56d491d2857f91fbd28adbc7", features = ["frost", "serde"] }
hex = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rand = "0.8"
serde_json = "1.0"
itertools = "0.12.1"
tokio = { version = "1", features = ["full"] }
message-io = "0.18"



[profile.release]
lto = true
panic = 'abort'
codegen-units = 1