[package]
name = "frost-uniffi-sdk"
version = "0.0.4"
edition = "2021"


[lib]
crate-type = ["lib","staticlib", "cdylib"]
name = "frost_uniffi_sdk"


[dependencies]
uniffi = { workspace = true }
thiserror = { workspace = true }
frost-core = { workspace = true }
frost-ed25519 = { workspace = true }
reddsa = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[features]
redpallas = []
default = ["redpallas"]

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }